# PythonProjectTemplate

./: CHANGELOG.md  CONTRIBUTIONS.md  README.md  setup.cfg
.github/workflows/: python_package.yml
cdstemplate/: __init__.py  corpus_counter_script.py  sample_module.py
tests/: test_sample_module.py
