[metadata]
name = cdstemplate
version = 1.0.0
description = A template repo for data science and machine learning projects at UMass Center for Data Science.
long_description = = file: README.md
long_description_content_type = text/markdown

[options]
python_requires => 3.9
packages = cdstemplate
# All the dependencies needed for running your module go here
install_requires =
    dvc==2.10.2
    numpy
    pandas
    scikit-learn


[options.extras_require]
# Extra dependencies only needed for running tests go here
test =
    pytest

# Dependencies that are useful only to developers, like an autoformatter and support for jupyter notebooks go here
dev =
    black
    jupyter